crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_full_pipeline_greedy.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: "format!(\"greedy_pick={best}\")"
---
greedy_pick=1
