crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_full_pipeline_top_k_then_softmax.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.0,
    0.7311,
    0.0,
    0.0,
    0.2689,
]
