crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_full_pipeline_with_penalty_and_softmax.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.1731,
    0.1731,
    0.0496,
    0.6042,
]
