crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_min_p_aggressive.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.6,
    0.0,
    0.0,
    0.0,
    0.0,
]
