crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_min_p_moderate.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.5,
    0.3,
    0.1,
    0.0,
    0.0,
]
