crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_repetition_penalty_mixed_logits.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    2.0,
    -3.0,
    1.0,
    0.0,
    -0.75,
]
