crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_repetition_penalty_no_history.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    1.0,
    2.0,
    3.0,
]
