crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_softmax_after_neg_inf.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.0,
    0.2689,
    0.0,
    0.7311,
]
