crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_softmax_simple_3.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.09,
    0.2447,
    0.6652,
]
