crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_softmax_with_negative.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.0321,
    0.0871,
    0.2369,
    0.6439,
]
