crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_temperature_high_flattens.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.1,
    0.2,
    0.3,
    0.4,
]
