crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_temperature_low_sharpens.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    10.0,
    20.0,
    30.0,
    40.0,
]
